solved layout issues and added basic JS

--- a/css/main.css
+++ b/css/main.css
@@ -29,20 +29,23 @@ header {
 	padding-bottom: 40px;
 }
 
-.tag {
-	/* align-items: flex-end; */
 
-}
+	/* Header styling */
+
+
 header h1 {
 	font: small-caps bold 72px/1 sans-serif;
 	margin-top: 30px;
 	margin-bottom: 0px;
-	color: #993333;
+	color: #660033;
+	text-shadow: 2px 1px #240012;
 }
 
 header p {
 	font: small-caps bold 24px/1 sans-serif;
-
+	color: #ECECEC;
+	text-decoration:overline;
+	text-shadow: 3px 2px black;
 }
 
 /* main navigation link styling and hover feature */
@@ -69,31 +72,47 @@ header p {
 
 /*Image containers styling*/
 
-.box {
-	display: flex;
-	flex-direction: column;
-	max-width: 600px;
-	width: 100%;
-	height: auto;
-	position: relative;
-	overflow: hidden;
-
-
-}
 
 div img {
 	margin: 2px;
-	display: block;
+	display: inline-block;
   max-width: 100%;
   max-height: 100%;
 }
 
+.card:hover {
+  opacity: .7;
+	cursor: pointer;
+}
 
+.card-title {
+	margin-top: 40%;
+	font-weight: bold;
+	font-size: 10vw;
+	color:#FBFBFC;
+	text-shadow: 2px 2px grey;
+}
+
+/*overlay content styling*/
+
+#overlay1 {
+    position: relative;
+    display: none; /* Hidden by default */
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.2); /* Black background with opacity */
+    z-index: 2;
+    cursor: pointer; 
+}
 
 
 /*Media Queries*/
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 576px) {
 
 
 .nav-bar ul {
@@ -101,7 +120,6 @@ div img {
 	flex-direction: row;
 	width: 100%;
 	margin: 0 0 0 1%;
-	/* padding: 2px 1%; */
 	margin-bottom: 0;
 }
 
@@ -119,13 +137,6 @@ div img {
 	margin-right: 0;
 }
 
-.box {
-		flex-direction: row;
-		max-width: 1000px;
-		max-height: 500px;
-
-}
-
-div img {
-			flex-wrap: wrap;
+.card-title {
+	font-size: 5vw;
 }
